Fix Notifications example on IE [#155240782]

--- a/src/css/media/media.scss
+++ b/src/css/media/media.scss
@@ -34,6 +34,7 @@
 
 .media-body {
   flex: 1;
+  flex-basis: auto;
 }
 
 // Reset margins on headings for tighter default spacing
